Add Qualifications module with base pages and test for adding new skill
- Implemented BaseQualifications and BaseAddPage for shared logic
- Created individual page classes: Skills, Education, Licenses, Languages, Memberships
- Added corresponding Add pages: AddSkills, AddEducation, AddLicenses, AddLanguages, AddMemberships
- Developed test AddNewQualificationsTest to verify skill creation flow

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -154,3 +154,13 @@ addEmployee.password.xpath=//label[text()='Password']/../following-sibling::div/
 addEmployee.confirmPassword.xpath=//label[text()='Confirm Password']/../following-sibling::div//input[@autocomplete='off']
 addEmployee.enabledButton.xpath=//input[@type='radio' and @value='1']
 addEmployee.disabledButton.xpath=//input[@type='radio' and @value='2']
+
+# ======================
+# QUALIFICATIONS PAGE LOCATORS
+# ======================
+admin.organization.skills.xpath=//a[text()='Skills']
+admin.organization.education.xpath=//a[text()='Education']
+admin.organization.licenses.xpath=//a[text()='Licenses']
+admin.organization.languages.xpath=//a[text()='Languages']
+admin.organization.memberships.xpath=//a[text()='Memberships']
+admin.organization.add.xpath=//form//input
