Refactor logging and extend functionality
- Refactored log4j2.xml for improved logging structure and readability
- Added new abstract BaseJobAddPage class
- Introduced helper methods in ActionHelper for better code reuse
- Implemented a new test for adding a shift
- Added a new getOrange method with credentials support in Navigator

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -21,12 +21,12 @@ common.records.found.xpath=//div[@class='orangehrm-horizontal-padding orangehrm-
 # ADMIN PANEL LOCATORS
 # ======================
 admin.usermanagement.xpath=//text()[normalize-space()='User Management']/ancestor::span[@class='oxd-topbar-body-nav-tab-item']
-admin.job.xpath=(//text()[normalize-space()='Job']/..)[2]
-admin.organization.xpath=//text()[normalize-space()='Organization']/..
-admin.qualifications.xpath=//text()[normalize-space()='Qualifications']/..
-admin.nationalities.xpath=//text()[normalize-space()='Nationalities']/..
-admin.branding.xpath=//text()[normalize-space()='Corporate Branding']/..
-admin.configuration.xpath=//text()[normalize-space()='Configuration']/..
+admin.job.xpath=//li//text()[normalize-space()='Job']/..
+admin.organization.xpath=//li//text()[normalize-space()='Organization']/..
+admin.qualifications.xpath=//li//text()[normalize-space()='Qualifications']/..
+admin.nationalities.xpath=//li//text()[normalize-space()='Nationalities']/..
+admin.branding.xpath=//li//text()[normalize-space()='Corporate Branding']/..
+admin.configuration.xpath=//li//text()[normalize-space()='Configuration']/..
 
 # ======================
 # MAIN MENU LOCATORS
@@ -123,7 +123,8 @@ users.userRoleDropDownBtn.xpath=//label[text()='User Role']/../..//i
 users.optionList.xpath=//div[@role='listbox']
 users.statusDropDownBtn.xpath=//label[text()='Status']/../..//i
 users.employeeNameField.xpath=//input[@placeholder='Type for hints...']
-users.userActionsXpath.xpath=//div[text()='{0}']/../following-sibling::div//i
+users.userActionsEditXpath.xpath=(//div[text()='{0}']/../following-sibling::div//i)[2]
+users.userActionsDeleteXpath.xpath=(//div[text()='{0}']/../following-sibling::div//i)[1]
 users.userCheckbox.xpath=//div[text()='{0}']/../preceding-sibling::div//input[@type='checkbox']
 
 # ======================
