Improve test stability and logging: - Updated log4j2.xml for aligned log formatting - Enhanced validateUser() with retry logic and detailed logging - Improved changePassword and logout methods for stability - Created new test for creating, logging in, changing password, and verifying user

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -49,6 +49,7 @@ menu.time.xpath=//span[text()='Time']
 # ======================
 header.userdropdown.xpath=//p[@class='oxd-userdropdown-name']
 header.logout.xpath=//a[text()='Logout']
+header.changePassword.xpath=//a[text()='Change Password']
 
 # ======================
 # NAVIGATION BAR LOCATORS
@@ -63,7 +64,7 @@ login.username.xpath=//input[@name='username']
 login.password.xpath=//input[@name='password']
 login.button.xpath=//button[@type='submit']
 login.text.xpath=//p[text()='Username : Admin']
-login.success.xpath=//h6[text()='Dashboard']
+login.success.xpath=//span[@class='oxd-userdropdown-tab']
 
 # ======================
 # JOB SUBMENU LOCATORS
@@ -149,12 +150,13 @@ pim.reportsPage.xpath=//li//text()[normalize-space()='Reports']/..
 addEmployee.firstName.xpath=//input[@name='firstName']
 addEmployee.middleName.xpath=//input[@name='middleName']
 addEmployee.lastName.xpath=//input[@name='lastName']
-addEmployee.radioButton.xpath=//input[@type='checkbox']
+addEmployee.radioButton.xpath=//span[contains(@class, 'oxd-switch-input oxd-switch-input--')]
 addEmployee.username.xpath=//label[text()='Username']/../following-sibling::div//input[@autocomplete='off']
 addEmployee.password.xpath=//label[text()='Password']/../following-sibling::div//input[@autocomplete='off']
 addEmployee.confirmPassword.xpath=//label[text()='Confirm Password']/../following-sibling::div//input[@autocomplete='off']
-addEmployee.enabledButton.xpath=//input[@type='radio' and @value='1']
-addEmployee.disabledButton.xpath=//input[@type='radio' and @value='2']
+addEmployee.enabledButton.xpath=(//span[contains(@class,'oxd-radio-input oxd-radio-input--')])[1]
+addEmployee.disabledButton.xpath=(//span[contains(@class,'oxd-radio-input oxd-radio-input--')])[2]
+addEmployee.employeeId.xpath=//label[text()='Employee Id']/../following-sibling::div//input[contains(@class, 'oxd-input oxd-input')]
 
 # ======================
 # QUALIFICATIONS PAGE LOCATORS
@@ -165,3 +167,9 @@ admin.organization.licenses.xpath=//a[text()='Licenses']
 admin.organization.languages.xpath=//a[text()='Languages']
 admin.organization.memberships.xpath=//a[text()='Memberships']
 admin.organization.add.xpath=//form//input
+
+
+# ======================
+# MY INFO PAGE LOCATORS
+# ======================
+my.info.employeeName.xpath=//h6[@class='oxd-text oxd-text--h6 --strong']
