--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,3 +3,4 @@ base.url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 username=Admin
 password=admin123
 defaultTimeout=30
+headless=false
