Changed toast success locator

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -9,7 +9,7 @@ common.button.search.xpath=//text()[contains(., 'Search')]/ancestor::button
 common.checkbox.all.xpath=//*[text()='Username']/preceding-sibling::div//input[@type='checkbox']
 common.checkbox.user.xpath=//div[text()='{0}']/../preceding-sibling::div//input[@type='checkbox']
 common.delete.confirm.xpath=//div[@class='orangehrm-modal-footer']//button//i
-common.toast.success.xpath=//div[@class='oxd-toast-start']
+common.toast.success.xpath=//div[@id='oxd-toaster_1']
 common.dropdown.option.xpath=//div[@role='option']//span[text()='{0}']
 common.input.generic.xpath=//label[text()='{0}']/../following-sibling::div//input
 common.dropdown.generic.xpath=//div[@class='oxd-select-wrapper']
