Add new configuration page classes and CheckDataImportTest
- Added page methods for CustomFields, DataImport, ReportingMethods, and TerminationReasons
- Implemented new test: CheckDataImportTest for validating employee data import via UI
- Improved ActionHelper with support for hidden file inputs
- Enhanced logging and error handling for better debugging

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -173,3 +173,21 @@ admin.organization.add.xpath=//form//input
 # MY INFO PAGE LOCATORS
 # ======================
 my.info.employeeName.xpath=//h6[@class='oxd-text oxd-text--h6 --strong']
+
+
+# ======================
+# PIM CONFIGURATION SUBMENU LOCATORS
+# ======================
+pim.configuration.optionalFields.xpath=//li//text()[normalize-space()='Optional Fields']/..
+pim.configuration.customFields.xpath=//li//text()[normalize-space()='Custom Fields']/..
+pim.configuration.dataImport.xpath=//li//text()[normalize-space()='Data Import']/..
+pim.configuration.reportingMethods.xpath=//li//text()[normalize-space()='Reporting Methods']/..
+pim.configuration.terminationReasons.xpath=//li//text()[normalize-space()='Termination Reasons']/..
+
+# ======================
+# PIM CONFIGURATION DATA IMPORT LOCATORS
+# ======================
+pim.configuration.dataImport.download=//p//a[text()='Download']
+pim.configuration.dataImport.upload=//button[text()=' Upload ']
+pim.configuration.dataImport.fileInputField=//input[@type='file']
+pim.configuration.dataImport.confirmButton=//button[text()=' Ok ']
