Add new methods to EmployeeList and ActionHelper; improve CheckDataImportTest logic

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -6,7 +6,7 @@ common.button.cancel.xpath=//button[text()=' Cancel ']
 common.button.add.xpath=//text()[contains(., 'Add')]/ancestor::button
 common.button.reset.xpath=//text()[contains(., 'Reset')]/ancestor::button
 common.button.search.xpath=//text()[contains(., 'Search')]/ancestor::button
-common.checkbox.all.xpath=//*[text()='Username']/preceding-sibling::div//input[@type='checkbox']
+common.checkbox.all.xpath=//*[text()='{0}']/preceding-sibling::div//input[@type='checkbox']
 common.checkbox.user.xpath=//div[text()='{0}']/../preceding-sibling::div//input[@type='checkbox']
 common.delete.confirm.xpath=//div[@class='orangehrm-modal-footer']//button//i
 common.toast.success.xpath=//div[@id='oxd-toaster_1']
@@ -16,6 +16,8 @@ common.dropdown.generic.xpath=//div[@class='oxd-select-wrapper']
 common.actions.delete.xpath=//i[@class='oxd-icon bi-trash-fill oxd-button-icon']
 common.actions.edit.xpath=//h6[text()='Edit User']
 common.records.found.xpath=//div[@class='orangehrm-horizontal-padding orangehrm-vertical-padding']//span
+common.sortTableBy.xpath=//div[text()='{0}']//div[@class='oxd-table-header-sort']
+common.sortTableBy.ascendingOrDescending.xpath=//div[text()='{0}']//div[@role='dropdown']//span[text()='{1}']
 
 # ======================
 # ADMIN PANEL LOCATORS
