Enhance universal animation waiting logic and add employee termination test
- Refactored animation waits to cover CSS/jQuery/RAF cases
- Added new test `terminateNewlyCreatedEmployee`
- Extended `EditEmployeeJobPage` and `EditEmployeePage` classes
- Improved stability for dynamic UI interactions

--- a/src/main/resources/locators/button-locators.properties
+++ b/src/main/resources/locators/button-locators.properties
@@ -193,3 +193,24 @@ pim.configuration.dataImport.download=//p//a[text()='Download']
 pim.configuration.dataImport.upload=//button[text()=' Upload ']
 pim.configuration.dataImport.fileInputField=//input[@type='file']
 pim.configuration.dataImport.confirmButton=//button[text()=' Ok ']
+
+# ======================
+# PIM EMPLOYEE LIST LOCATORS
+# ======================
+pim.employeeList.editButton=(//div[@class='oxd-table-cell-actions']/button[1])[1]
+
+# ======================
+# PIM EDIT EMPLOYEE LIST LOCATORS
+# ======================
+pim.editEmployee.job=//a[text()='Job']
+
+# ======================
+# PIM EDIT EMPLOYEE LIST JOB LOCATORS
+# ======================
+pim.editEmployee.job.terminateButton=//button[@title='Terminate Employment']
+pim.editEmployee.job.terminationDateField=//label[text()='Termination Reason']/ancestor::form//input
+pim.editEmployee.job.terminationReasonDropdown=//label[text()='Termination Reason']/../..//div[text()='-- Select --']
+pim.editEmployee.job.dropDownList=//div[@role='listbox']
+pim.editEmployee.job.dropDownList.option=//div[@role='listbox']//span[text()='{0}']
+pim.editEmployee.job.saveButton=//p[text()=' * Required']/following-sibling::button[text()=' Save ']
+pim.editEmployee.job.modal=//div[@class='oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow oxd-dialog-sheet--gutters orangehrm-dialog-modal']
